<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>trabajo_grupal</groupId>
    <artifactId>red_social_tareas</artifactId>
    <version>0.0.1-SNAPSHOT</version>

 	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!--  Java  -->
		<maven.compiler.release>17</maven.compiler.release>
		<!--  JavaFX  -->
		<javafx.version>21</javafx.version>
		<javafx.platform>win</javafx.platform>
		<!--  Librerías  -->
		<hibernate.version>5.6.15.Final</hibernate.version>
		<mysql.version>8.0.33</mysql.version>
		<slf4j.version>2.0.9</slf4j.version>
		<junit.jupiter.version>5.10.0</junit.jupiter.version>
	</properties>
	
	<dependencies>
	<!--  JavaFX (incluye WebView)  -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!--  Hibernate core (JPA + ORM)  -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!--  API JPA (javax.persistence)  -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>
		<!--  Driver MySQL (coordenadas nuevas, evita el warning de "relocated")  -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		<!--  Log (slf4j + simple) para ver los logs de Hibernate  -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!--  JUnit 5 para tests  -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>net.sf.jasperreports</groupId>
		    <artifactId>jasperreports</artifactId>
		    <version>6.20.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>7.0.3</version>
		</dependency>
		
		<dependency>
	    	<groupId>net.sf.jasperreports</groupId>
	    	<artifactId>jasperreports-pdf</artifactId>
    	<version>7.0.3</version>
	</dependency>

	</dependencies>
	
	<build>
		<plugins>
		<!--  Plugin de compilación de Maven  -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<!--  Ejecutar JavaFX con: mvn javafx:run  -->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
				<!--  CAMBIA esto si tu clase principal es otra  -->
					<mainClass>main.Main</mainClass>
					<addModules>javafx.controls,javafx.fxml,javafx.web</addModules>
				</configuration>
			</plugin>
			<!--  Plugin de tests (JUnit 5)  -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<useModulePath>false</useModulePath>
				</configuration>
			</plugin>
		</plugins>
	</build>			
</project>
